Avoid URL constructors, deprecated in Java 20.